--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	<input type="file" name="pic" value="c:\2.txt" >
 	<input type="submit" value="上传">
     </form>	 
-	<form action="download.php" enctype="multipart/form-data" method="post">
-	<input type="submit" value="下载">	
-	</form>
 	
-	<p><a href="./download2.php">王云下载</a></p>
+	
+	<p><a href="download2.php">phpStudy_64.zip下载</a></p>
 	<p>
-	  <a href="./download3.php">下云下载</a></p>
+	  <a href="download3.php">photo.zip文件夹下载</a></p>
 	
-
+<p>
+	  <a href="download4.php">yec.zip文件夹下载</a></p>
+	
 	
 
 </body>	
