--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>upload</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=http://[240e:306:d82:b9f2:3127:ad32:f962:2700]/index.html">
+    <title>Page Redirect</title>
 </head>
-	
-
 <body>
-	<form action="upload.php" enctype="multipart/form-data" method="post">
-	<input type="file" name="pic" value="c:\2.txt" >
-	<input type="submit" value="上传">
-    </form>	 
-	
-	
-	<p><a href="download2.php">phpStudy_64.zip下载</a></p>
-	<p>
-	  <a href="download3.php">photo.zip文件夹下载</a></p>
-	
-<p>
-	  <a href="download4.php">yec.zip文件夹下载</a></p>
-	
-	
-
-</body>	
-	
+    <script>
+        window.location.href = 'http://[240e:306:d82:b9f2:3127:ad32:f962:2700]/index.html';
+    </script>
+</body>
 </html>
