--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:306:d82:b9f2:3127:ad32:f962:2700]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:306:15b9:5700:3127:ad32:f962:2700]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
