--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:306:d82:b9f2:3127:ad32:f962:2700]/index.html';
+        window.location.href = 'http://[240e:306:15b9:5700:3127:ad32:f962:2700]/index.html';
     </script>
 </body>
 	
