--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:306:1583:7e00:3127:ad32:f962:2700]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:838b:af00:3127:ad32:f962:2700]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:306:1583:7e00:3127:ad32:f962:2700]/index.html';
+        window.location.href = 'http://[240e:304:838b:af00:3127:ad32:f962:2700]/index.html';
     </script>
 </body>
 	
