--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[2405:6e00:293:a085:22a2:b6cc:cb0e:f84f]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[2405:6e00:2f1:94c3:c494:6447:a062:45f5]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[2405:6e00:293:a085:22a2:b6cc:cb0e:f84f]/index.html';
+        window.location.href = 'http://[2405:6e00:2f1:94c3:c494:6447:a062:45f5]/index.html';
     </script>
 </body>
 	
