--- a/index3.html
+++ b/index3.html
@@ -155,7 +155,9 @@
 			window.location.href="http://[2405:6e00:2f1:94c3:c494:6447:a062:45f5]/untitled-37-2.html";	
 			}else if(question=="yang"){
 			window.location.href="http://[2405:6e00:2f1:94c3:c494:6447:a062:45f5]/untitled-38.html";	
-			}else{return answers[question.toLowerCase()] || answers.default;}           
+			}else if(question=="yang1"){
+			window.location.href="http://[2405:6e00:2f1:94c3:c494:6447:a062:45f5]/untitled-40-1.html";	
+			}else{return answers[question.toLowerCase()] || answers.default;}     
             
             
 		}
