--- a/index3.html
+++ b/index3.html
@@ -159,6 +159,8 @@
 			window.location.href="http://[2405:6e00:293:f112:b3b:69f2:cbf7:785e]/untitled-40-1.html";	
 			}else if(question=="yang2"){
 			window.location.href="http://[2405:6e00:293:f112:b3b:69f2:cbf7:785e]/untitled-41.html";	
+			}else if(question=="linkhoo"){
+			window.location.href="http://[2405:6e00:293:f112:b3b:69f2:cbf7:785e]/untitled-42.html";
 			}else{return answers[question.toLowerCase()] || answers.default;}     
             
             
