--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[2405:6e00:293:f112:b3b:69f2:cbf7:785e]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[2405:6e00:492:774d:cf5:7a03:b1ea:3f0d]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[2405:6e00:293:f112:b3b:69f2:cbf7:785e]/index.html';
+        window.location.href = 'http://[2405:6e00:492:774d:cf5:7a03:b1ea:3f0d]/index.html';
     </script>
 </body>
 	
