--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[2405:6e00:4ee:e10b:d54f:27e2:5910:6777]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[2405:6e00:294:1b1c:c9b4:ca48:b654:cf65]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[2405:6e00:4ee:e10b:d54f:27e2:5910:6777]/index.html';
+        window.location.href = 'http://[2405:6e00:294:1b1c:c9b4:ca48:b654:cf65]/index.html';
     </script>
 </body>
 	
