--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:304:8397:6d00:3127:ad32:f962:2700]/index.html';
+        window.location.href = 'http://[240e:304:83a8:5e00:3127:ad32:f962:2700]/index.html';
     </script>
 </body>
 	
