--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:304:8397:6d00:3127:ad32:f962:2700]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:83db:cd01:3127:ad32:f962:2700]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:304:83a8:5e00:3127:ad32:f962:2700]/index.html';
+        window.location.href = 'http://[240e:304:83db:cd01:3127:ad32:f962:2700]/index.html';
     </script>
 </body>
 	
 </html>
+
