--- a/index4.html
+++ b/index4.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:83db:cd01:3127:ad32:f962:2700]/index.html">
+    <title>Page Redirect</title>
 </head>
 <body>
-    <p>welcome you</p>
+    <script>
+        window.location.href = 'http://[240e:304:83db:cd01:3127:ad32:f962:2700]/index.html';
+    </script>
 </body>
+	
 </html>
