--- a/index5.html
+++ b/index5.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:304:83a5:5001:3127:ad32:f962:2700]/untitled-37-2.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:83bc:9e01:3127:ad32:f962:2700]/untitled-37-2.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:304:83a5:5001:3127:ad32:f962:2700]/untitled-37-2.html';
+        window.location.href = 'http://[240e:304:83bc:9e01:3127:ad32:f962:2700]/untitled-37-2.html';
     </script>
 </body>
 	
 </html>
+
 
