--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:304:83bc:9e01:3127:ad32:f962:2700]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:8384:9f01:3127:ad32:f962:2700]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
@@ -12,6 +12,7 @@
 </body>
 	
 </html>
+
 
 
 
