--- a/index4.html
+++ b/index4.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:304:83bc:9e01:3127:ad32:f962:2700]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:8384:9f01:3127:ad32:f962:2700]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:304:83bc:9e01:3127:ad32:f962:2700]/index.html';
+        window.location.href = 'http://[240e:304:8384:9f01:3127:ad32:f962:2700]/index.html';
     </script>
 </body>
 	
 </html>
+
 
 
