--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:304:83bc:9e01:3127:ad32:f962:2700]/index.html';
+        window.location.href = 'http://[240e:304:8384:9f01:3127:ad32:f962:2700]/index.html';
     </script>
 </body>
 	
 </html>
+
 
 
 
