--- a/index5.html
+++ b/index5.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:304:8384:9f01:3127:ad32:f962:2700]/untitled-37-2.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:8381:8b01:3127:ad32:f962:2700]/untitled-37-2.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:304:8384:9f01:3127:ad32:f962:2700]/untitled-37-2.html';
+        window.location.href = 'http://[240e:304:8381:8b01:3127:ad32:f962:2700]/untitled-37-2.html';
     </script>
 </body>
 	
 </html>
+
 
 
 
