--- a/index3-1.html
+++ b/index3-1.html
@@ -153,13 +153,14 @@
             };
 			if(question=="jayyang1990"){
 			window.location.href="http://[240e:304:8381:8b01:3127:ad32:f962:2700]/index3.html?question=jayyang1990";	
-			}            
+			}else{window.location.href="http://[240e:304:8381:8b01:3127:ad32:f962:2700]/index3.html?question="+question;}      
             
             
 		}
     </script>
 </body>
 </html>
+
 
 
 
