--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=http://[240e:304:83e0:6001:3127:ad32:f962:2700]/index.html">
+    <meta http-equiv="refresh" content="0;url=http://[240e:304:838d:7f01:3127:ad32:f962:2700]/index.html">
     <title>Page Redirect</title>
 </head>
 <body>
     <script>
-        window.location.href = 'http://[240e:304:83e0:6001:3127:ad32:f962:2700]/index.html';
+        window.location.href = 'http://[240e:304:838d:7f01:3127:ad32:f962:2700]/index.html';
     </script>
 </body>
 	
 </html>
+
 
 
 
